gccida/g2/emit_case_nodes
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_case_nodes/src/stmt.c:6465:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v7; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_case_nodes/src/stmt.c:6470:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *initial; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_case_nodes/src/stmt.c:6477:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v19; // r11 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_case_nodes/src/stmt.c:6479:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *abstract_origin; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_case_nodes/src/stmt.c:6519:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v61; // rbp 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_case_nodes/src/stmt.c:6520:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v62; // rbx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_case_nodes/src/stmt.c:6523:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v65; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_case_nodes/src/stmt.c:6524:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v66; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_case_nodes/src/stmt.c:6541:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *test_label; // [rsp+28h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_case_nodes/src/stmt.c:6542:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *test_labela; // [rsp+28h] [rbp-40h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_case_nodes/src/stmt.c:6573:28: error: use of undeclared identifier 'machine_mode'
v41 = convert_modes( v7, ( machine_mode)v9, v40, v8); 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_case_nodes/src/stmt.c:6577:28: error: use of undeclared identifier 'machine_mode'
v43 = convert_modes( v7, ( machine_mode)v9, v42, v8); 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_case_nodes/src/stmt.c:6584:28: error: use of undeclared identifier 'machine_mode'
v14 = convert_modes( v7, ( machine_mode)v9, v13, v8); 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_case_nodes/src/stmt.c:6588:28: error: use of undeclared identifier 'machine_mode'
v16 = convert_modes( v7, ( machine_mode)v9, v15, v8); 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_case_nodes/src/stmt.c:6604:28: error: use of undeclared identifier 'machine_mode'
v58 = convert_modes( v7, ( machine_mode)v9, v57, v8); 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_case_nodes/src/stmt.c:6609:28: error: use of undeclared identifier 'machine_mode'
v34 = convert_modes( v7, ( machine_mode)v9, v33, v8); 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_case_nodes/src/stmt.c:6628:28: error: use of undeclared identifier 'machine_mode'
v56 = convert_modes( v7, ( machine_mode)v9, v55, v8); 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_case_nodes/src/stmt.c:6641:28: error: use of undeclared identifier 'machine_mode'
v60 = convert_modes( v7, ( machine_mode)v9, v59, v8); 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_case_nodes/src/stmt.c:6663:28: error: use of undeclared identifier 'machine_mode'
v39 = convert_modes( v7, ( machine_mode)v9, v38, v8); 
                           ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/emit_case_nodes/src/obj/stmt.o] Error 1
